Completed refactoring of OCR module:  - added in-memory Fake for SqsQueue object;  - fixed tests for bulk processing of nodes pending OCR;  - fixed hook ocr_enable, added hook ocr_install

--- a/sites/all/modules/custom/sport_event/sport_event.css
+++ b/sites/all/modules/custom/sport_event/sport_event.css
@@ -8,13 +8,14 @@
 	}
 
 .googlemaps {
-	background-image:url(images/googlemaps.png);
+	background:transparent url(images/googlemaps.png);
 	background-repeat:no-repeat;
 	padding-top: 100px;
 	padding-left: 150px;
 	width:350px;
 	display:block;
 	height:200px;
+  /*	opacity: 0.4; */
 	
 	}
 .coming-soon {
