- fixed layout of photo search page - changed menu path of photo upload page - added title to page type nodes

--- a/sites/all/modules/custom/photo_search/photo_search.css
+++ b/sites/all/modules/custom/photo_search/photo_search.css
@@ -121,6 +121,7 @@ margin-left:-10px;
 #field-number label,
 #field-event label {
 	margin-bottom:3px;	
+	margin-left:0px;
 }
 
 #field-event span.form-required,
@@ -188,10 +189,6 @@ width:420px;
   float:left;
   padding:20px;
 }
-/*.page-search-result .number_search
-{ 
-padding:20px;
-}*/
 
 .view-search-results {
 	float: left;
