--- a/sites/all/modules/custom/sport_event/sport_event.css
+++ b/sites/all/modules/custom/sport_event/sport_event.css
@@ -48,7 +48,7 @@
 	}
 
 /* Blocks */
-.node-event .region .title {
+.node-type-event .region .title {
 	background-color: rgb(26,37,60);
 	color: #FFF;
 	font-weight:bold;
@@ -100,7 +100,18 @@
 	float:right;
 	margin-top:0.5em;
 	margin-left:0px;
+	line-height:20px;
 }
+
+.disabled {
+	background-color: #BBCCEE;	/*#FF6600; */
+	color:			rgb(26,37,60);	/*#FFFFFF;*/
+	float:right;
+	margin-top:0.5em;
+	margin-left:0px;
+	line-height:20px;
+}
+
 /* -------------- THE button -------------- */
 .button {
 
