--- a/sites/all/themes/runmemo/css/style.css
+++ b/sites/all/themes/runmemo/css/style.css
@@ -2282,7 +2282,7 @@ border-bottom: 1px solid #e9e9e9!important;
 }
 .font #select-event-runner-get-photos .form-button, .form-submit {
   margin: 0px;
-  line-height: 32px!important;
+  line-height: 32px;
 }
 .page-user .form-item-remember-me #edit-remember-me {
   width: 15px!important;
