--- a/sites/all/themes/runmemo/css/style.css
+++ b/sites/all/themes/runmemo/css/style.css
@@ -488,7 +488,6 @@ margin:0 !important;
 font-family: 'Futura LT Light',sans-serif;
     font-size: 18px;
     font-weight: normal;
-    margin: 10px 0 10px 0;
     padding: 0;
 }
 
@@ -502,11 +501,6 @@ margin:0 !important;
 margin:0 !important;
 background:none !important;
 border:0 none !important;
-}
-#event_runner_chzn{
- width:185px !important; 
-  
-  /* padding:0 10px 0 0;*/
 }
 
 /**************************************Login Page********************************/
@@ -564,15 +558,27 @@ min-height:480px;
 	box-shadow: none !important;
 }
 .page-user #sidebar-second .block {
-padding:0;
+	padding:0;
 }
-.page-user #register-form{
-border: 1px solid #D2D2D2;
+.page-user #register-form {
+	border: 1px solid #D2D2D2;
     float: left;
     margin-right: 15px;
     width: 490px;
-margin-bottom:20px;
+	margin-bottom:20px;
 }
+.page-user #user-login .form-text,
+.page-login #user-login .form-text {
+	width:250px;
+	margin-righ:10px;
+	float:right;
+	clear:right;
+	margin:bottom:15px;
+	}
+
+.page-user .form-submit {
+	width:150px;
+	}
 #login-links, #login-message, #login-form .description,.page-user .login-forgot{
 display:none;
 }
@@ -586,17 +592,14 @@ display:block !important;
 float:left;
 margin-top:20px;
 }
-.page-user #user-login .form-item{
-float: left;
-margin: 0 0 15px 20px;
-width:175px;
-}
+
 .page-login #user-register .form-item{
 float: left;
 margin-bottom: 15px;
 width:490px;
 }
- #user-register-form label,#user-login label{
+ #user-register-form label,
+ #user-login label{
     color: #1A253C;
     float: left;
     font-family: arial;
@@ -604,52 +607,31 @@ width:490px;
     font-weight: 300;
     margin-top: 14px;
     text-align: right;
-    width: 136px;
 }
-.page-user #user-login label{
+.page-user #user-login label,
+.page-login #user-login label{
     color: #1A253C;
     float: left;
     font-family: arial;
     font-size: 12px;
     font-weight: 300;
     margin-top: 14px;
-    text-align: left;
-    width: 136px;
     height: 30px
 }
+.page-user .form-item,
+.page-login .form-item {
+	clear:both;
+	margin-bottom:10px;
+	display:block;
+	height:45px;
+	}
 
-#user-register-form input,#user-login input{
-    border: 1px solid #DEE4E7;
-    border-radius: 5px 5px 5px 5px;
-    /*color: #1A253C;*/
-    font-family: Arial,Helvetica,sans-serif;
-    font-size: 13px;
-    height: 40px; 
-    line-height:40px;
-    -webkit-box-shadow: none !important; 
-    -moz-box-shadow: none !important; 
-    box-shadow: none !important;
-    padding: 2px;
-    /*text-indent: 7px;*/
-    width: 300px;
-    margin-left:8px;
-}
-.page-user #user-login input{
-    border: 1px solid #DEE4E7;
-    border-radius: 5px 5px 5px 5px;
-    /*color: #1A253C;*/
-    font-family: Arial,Helvetica,sans-serif;
-    font-size: 13px;
-    height: 30px; 
-    line-height:21px;
-    -webkit-box-shadow: none !important; 
-    -moz-box-shadow: none !important; 
-    box-shadow: none !important;
-    padding: 2px;
-    /*text-indent: 7px;*/
-    width: 150px;
-    margin-left:0px;
-}
+
+#user-register-form .form-text {
+	float:right;
+	 width: 300px;
+	}
+
 #user-register-form .sidebar input{
 width:80px;
 margin-left:10px;
@@ -667,14 +649,7 @@ padding:none !important;
 #user-register-form #edit-actions{
 float:left;
 }
-#user-register-form  #paypal_icon{
-float: right !important;
- position: relative;
-    right: 35px;
-    top: 96px;
-padding:0 !important;
 
-}
 .page-user-edit .password-strength, .page-user-edit .description
 {
     display:none!important;
@@ -728,16 +703,25 @@ display:none;
 .front .region-content {
 	float:right;
 	}
-	
+
 .front #center .content {
 	margin-left:20px;
 }
 .front #field-number label, .front #field-event label {
 	display:none;
 }
-.front #field-number, .front #field-event {
-	margin-left:20px;
-	}
+
+.front .form-item-name label,
+.front .form-item-pass label {
+display:none;
+
+}
+	
+.front form {
+	border:none;
+	padding:0px;
+	}	
+
 .one-sidebar .content span table{
 display:none !important;
 }
@@ -761,11 +745,7 @@ float:right;
 margin:0 !important;
 }
 /********************login Page**********************************************************/
-.page-user #user-login{
-margin:60px 0 auto;
 
-    width: 470px;
-}
 .page-user #user-login .description{
 display:none;
 }
@@ -801,7 +781,8 @@ margin:0 !important;
 color:#4ab0f8 !important;
 }
 #user-register-form{
-margin-top:40px;
+	margin-top:40px;
+	padding:20px;
 }
 
 
@@ -810,47 +791,8 @@ margin:0 auto !important;
 height:auto !important;
 float:none !important;
 }
-.page-login #edit-actions--2 #edit-submit--2{
-width:170px;
-height: 37px;
-position:relative;
-left:135px;
-color: #34373A;
-cursor:pointer;
-background: url("../images/button-bg.png") repeat-x scroll 0 0;
-border:none;
-border-radius: 6px;
--moz-border-radius: 6px;
--webkit-border-radius: 6px;
-border-right: 1px solid #bfbfbf;
-border-left: 1px solid #bfbfbf;
-font-weight:bold;
-/*font-family:helvetica,san-serif;
-font-size:14px;
-background:#f5f5f5;
-border:1px solid #bfbfbf;
-border-radius:5px;
--moz-border-radius: 5px 5px 5px 5px;*/
-}
-.page-login #edit-actions--2 #edit-submit--2:hover{
-	background: url("../images/button-bg-hover.png") repeat-x scroll 0 0;
-	}
 
-.page-login #edit-actions #edit-submit {
-width:89px;
-height:37px;
-cursor:pointer;
-background: url("../images/button-bg.png") repeat-x scroll 0 0;
-border:none;
-position:relative;
-left:137px;
-border-radius: 6px;
--moz-border-radius: 6px;
--webkit-border-radius: 6px;
-border-right: 1px solid #bfbfbf;
-border-left: 1px solid #bfbfbf;
-font-weight: bold;
-}
+
 .page-user #user-login #edit-actions
 {
   float:right;
@@ -861,23 +803,9 @@ font-weight: bold;
 }
 
 .page-user #edit-actions #edit-submit {
-width:89px;
-height:37px;
-cursor:pointer;
-background: url("../images/button-bg.png") repeat-x scroll 0 0;
-border:none;
-border-radius: 6px;
--moz-border-radius: 6px;
--webkit-border-radius: 6px;
-border-right: 1px solid #bfbfbf;
-border-left: 1px solid #bfbfbf;
-font-weight: bold;
-margin: 20px 30px 0 0px;
+width:150px;
 }
 
-.page-login #edit-actions #edit-submit:hover,.page-user #edit-actions #edit-submit:hover{
-	background: url("../images/button-bg-hover.png") repeat-x scroll 0 0;
-}
 .captcha img{
 float:right;
 position: relative;
@@ -916,62 +844,9 @@ float:right;
 margin-bottom:20px;
 }
 
-#runner_number {
-    border: 1px solid #DEE4E7;
-    border-radius: 5px 5px 5px 5px;
-    color: #1A253C;
-    color: #1A253C;
-    font-family: Arial,Helvetica,sans-serif;
-    font-size: 18px;
-    height: 39px;
-    -webkit-box-shadow: none !important; 
-    -moz-box-shadow: none !important; 
-	box-shadow: none !important;
-    text-indent: 7px;
-    width: 167px;
-    
-}
-
-
-
-#runner_number {
-	  margin-left: 0px!important;
-	  width:184px;
-	}
-	
-
-   /*background: none repeat scroll 0 0 #F5F5F5;
-border: 1px solid #BFBFBF;
-    color: #34373A;
-*/
-#edit-search{
-    background: url("../images/search.png") no-repeat scroll 0 0 !important;
-    border:0 none!important;
-    cursor: pointer!important;
-    height:40px!important;
-    width: 108px!important;
-}
-#edit-search:hover
-{
-	/*background:url(../images/search-hover.png) no-repeat; */
-}
-.front #edit-get-started {
-	background: url("../images/get-started.png") no-repeat scroll 0 0 !important;
-    border:0 none;
-    cursor: pointer;
-    height:37px;
-    width: 109px;
-    margin-left:215px;
-    display:block;
-   
-}
-#edit-get-started:hover
-{
-	background:url(../images/get-started-hover.png) no-repeat!important;
-}
-
 #front-search-photos {
-	width:450px;
+	width:400px;
+	padding-right:20px;
 	}
 
 .page-search-result .chzn-container-single .chzn-single,
@@ -980,6 +855,11 @@ width:450px!important;
 height:39px!important; 
 /* padding:0 10px; */
 }
+
+.front .chzn-container-single {
+	width:400px!important;
+	}
+
 .page-search-result .chzn-drop, 
 .page-photographer .chzn-drop {
 /*width:307px!important; */
@@ -987,7 +867,6 @@ padding:0 10px;
 width:400px!important;
 }
 .chzn-container-single .chzn-single{
-width:350px!important;
 height:39px!important; 
 background-image: none!important;
 border: 2px solid #EEF1F2!important;
@@ -1169,9 +1048,7 @@ display:none;
 }	
 .page-login .content #sign-in-fieldset {
   float:right;
-  
-  padding:0;
-  margin:0 0 0 0;
+  padding-right:0px;
 }
 .page-login .content #register-fieldset {
   float:left;
@@ -1219,11 +1096,7 @@ border:none !important;
 }
 
 .page-login .content {
-  border:none!important;
-  -moz-box-shadow:none!important;
-  -webkit-box-shadow:none!important;
-  -o-box-shadow:none!important;
-   box-shadow:none!important;
+	float:right;
 }
 .page-login #user-register-form{
    border: 1px solid #D2D2D2;
@@ -1232,14 +1105,6 @@ margin-right:20px;
 margin-top:0;
 }
 
-
-.page-login #user-register-form #edit-actions--2{
-float:left;
-}
-.page-login #user-login{
-border:1px solid #D2D2D2;
-    width: 470px;
-}
 .page-login #register-fieldset .fieldset-wrapper {
   margin-right: 10px;
     padding: 0;
@@ -1248,10 +1113,9 @@ border:1px solid #D2D2D2;
 }
 
 .page-login #sign-in-fieldset .fieldset-wrapper {
-  width:470px;
-margin:0;
+  width:400px;
+
 float:right;
-padding:0;
 
 }
 
@@ -1300,25 +1164,35 @@ margin-top:0 !important;
 }
 
 .page-user #block-system-main{
-margin:0;
+	margin:0;
 }
 
+.page-user form,
+.page-login form,
+.view-filters form {
+	padding:20px;
+	border: 1px solid #BFBFBF;
+    border-radius: 5px;
+   
+	}
 .page-user #user-login{
-    border: 1px solid #BFBFBF;
-    height: 200px !important;
-    margin: 0 auto !important;
-    width: 400px !important;
-    border-bottom-left-radius: 6px;
-    border-bottom-right-radius: 6px;
-    background:url(../images/bg.png) repeat;
+    height: 200px;
+    width: 400px;
+   
 }
+
+.page-login #user-login {
+	height:200px;
+	}
+
+
 .page-user .form{
-margin-top:50px!important;
+	margin-top:50px!important;
 }
 
 .page-user-password #edit-actions #edit-submit{
-width:auto;
-padding:7px;
+	width:auto;
+	padding:7px;
 }
 .toolbar-drawer #edit-actions{
 float:left;
@@ -1350,9 +1224,6 @@ margin-top:20px;
 }
 
 /*************************Events*******************************************/
-.region-content{
-	float:left;
-}
 
 .region-sidebar-second h2 {
 	color: #444;
@@ -1546,7 +1417,9 @@ text-align:center;
 	display:block;
 	margin-right:10px;
 	}
-	
+.region-recent-events {
+	margin-top:20px;
+}
 .region-recent-events .title {
 	color:#444;
 	font-family:Arial, Helvetica, sans-serif;
@@ -2280,10 +2153,7 @@ border-bottom: 1px solid #e9e9e9!important;
    filter : none !important; 
    
 }
-.font #select-event-runner-get-photos .form-button, .form-submit {
-  margin: 0px;
-  line-height: 32px;
-}
+
 .page-user .form-item-remember-me #edit-remember-me {
   width: 15px!important;
   height: 15px!important;
@@ -2300,9 +2170,7 @@ border-bottom: 1px solid #e9e9e9!important;
     color: #94bb1f;
     font-weight: normal;
 }
-.page-user #user-login .form-actions {
-    margin: 0px!important;
-}
+
 .page-login #user-register-form .confirm-parent, .password-parent {
     width: 490px;
     margin: 10px 0 10px 0;
@@ -2310,18 +2178,7 @@ border-bottom: 1px solid #e9e9e9!important;
 .page-login #user-register-form .confirm-parent label {
     padding: 0 9px 0 0;
 }
-.page-login #user-login #edit-remember-me {
-   width: 17px!important;
-   height: 17px!important;
-   float: left;
-   margin: 2px 0 0 139px;
-}
-.page-login .form-item-remember-me label {
-   float: left;
-   margin: 0px!important;
-   padding: 0 0 0 10px!important;
-   text-align: left!important;
-}
+
 .page-login #forgot_pwd {
   color: #94bb1f;
 }
@@ -2612,3 +2469,224 @@ border-bottom: 1px solid #e9e9e9!important;
   .chzn-container .chzn-results {
     border: 1px solid #DEDEDE;
   }
+  
+  
+  /* login */
+  
+  #join-us-text {
+  	float:left;
+  	margin-right:2px;
+  	margin-top:10px;
+  }
+  
+  #user-login-register {
+  	margin-top:10px;
+	float:left;
+  }
+
+/* Form Text */
+
+.form-text {	
+    border: 1px solid #DEE4E7;
+   	border-radius: 3px 3px 3px 3px;
+    color: #1A253C;
+    font-family: Arial,Helvetica,sans-serif;
+    font-size: 18px;
+    height: 40px;
+    text-indent: 7px;
+    width:400px;
+    padding:0px;
+	}
+	
+#runner_number {
+    width: 220px;
+}
+
+/* -------------- THE button -------------- 
+#user-login input{
+    font-family: Arial,Helvetica,sans-serif;
+    font-size: 13px;
+    height: 40px; 
+    -webkit-box-shadow: none !important; 
+    -moz-box-shadow: none !important; 
+    box-shadow: none !important;
+   width: 400px;
+}
+*/
+
+
+
+.form-submit {
+/* text */
+	text-decoration: 		none;
+	font-size: 				14px;
+	font-weight: 			bold;
+	-webkit-user-select: 	none;
+	-moz-user-select: 		none;
+	user-select: 			none;
+	
+	
+/* layout */
+	display: 				inline-block;
+	position: 				relative;
+	width: 150px;
+	height: 40px;
+	float:right;
+	-webkit-border-radius: 	5px;
+	-moz-border-radius: 	5px;
+	border-radius: 5px;
+	
+/* effects */
+	border: 1px solid #DEE4E7;
+	/*border-top: 		1px solid rgba(255,255,255,0.8);
+	border-bottom: 		1px solid rgba(0,0,0,0.1);*/
+	
+	
+	-webkit-transition: background .2s ease-in-out;
+	-moz-transition: 	background .2s ease-in-out;
+	transition: 		background .2s ease-in-out;
+	
+/* color 
+	color: 				hsl(0, 0%, 0%) !important; 
+	background-color: 	hsl(0, 0%, 75%);
+	*/
+	color:#EEE;
+	background-color:#EE6600;
+	
+	-webkit-box-shadow: inset rgba(255,254,255,0.6) 0 0.3em .3em, inset rgba(0,0,0,0.15) 0 -0.1em .3em, /* inner shadow */ 
+						hsl(0, 0%, 60%) 0 .1em 3px, hsl(0, 0%, 45%) 0 .3em 1px, /* color border */
+						rgba(0,0,0,0.2) 0 .5em 5px; /* drop shadow */
+	-moz-box-shadow: 	inset rgba(255,254,255,0.6) 0 0.3em .3em, inset rgba(0,0,0,0.15) 0 -0.1em .3em, /* inner shadow */ 
+						hsl(0, 0%, 60%) 0 .1em 3px, hsl(0, 0%, 45%) 0 .3em 1px, /* color border */
+						rgba(0,0,0,0.2) 0 .5em 5px; /* drop shadow */
+	box-shadow:		 	inset rgba(255,254,255,0.6) 0 0.3em .3em, inset rgba(0,0,0,0.15) 0 -0.1em .3em, /* inner shadow */ 
+						hsl(0, 0%, 60%) 0 .1em 3px, hsl(0, 0%, 45%) 0 .3em 1px, /* color border */
+						rgba(0,0,0,0.2) 0 2px 2px; /*  drop shadow */
+}
+
+/* -------------- button (tag) -------------- */
+
+.form-submit:hover {
+ background-color:#FF4400;
+}
+
+
+
+.form-submit:active {
+	background-image: 	-webkit-gradient(radial, 50% 0, 100, 50% 0, 0, from( rgba(255,255,255,0) ), to( rgba(255,255,255,0) )), url(noise.png);
+	background-image: 	-moz-gradient(radial, 50% 0, 100, 50% 0, 0, from( rgba(255,255,255,0) ), to( rgba(255,255,255,0) )), url(noise.png);
+	background-image: 	gradient(radial, 50% 0, 100, 50% 0, 0, from( rgba(255,255,255,0) ), to( rgba(255,255,255,0) )), url(noise.png);
+
+	-webkit-box-shadow: inset rgba(255,255,255,0.6) 0 0.3em .3em, inset rgba(0,0,0,0.2) 0 -0.1em .3em, /* inner shadow */ 
+							rgba(0,0,0,0.4) 0 .1em 1px, /* border */
+							rgba(0,0,0,0.2) 0 .2em 6px; /* drop shadow */
+	-moz-box-shadow: 	inset rgba(255,255,255,0.6) 0 0.3em .3em, inset rgba(0,0,0,0.2) 0 -0.1em .3em, /* inner shadow */ 
+							rgba(0,0,0,0.4) 0 .1em 1px, /* border */
+							rgba(0,0,0,0.2) 0 .2em 6px; /* drop shadow */
+	box-shadow: 		inset rgba(255,255,255,0.6) 0 0.3em .3em, inset rgba(0,0,0,0.2) 0 -0.1em .3em, /* inner shadow */ 
+							rgba(0,0,0,0.4) 0 .1em 1px, /* border */
+							rgba(0,0,0,0.2) 0 .2em 6px; /* drop shadow */
+
+	-webkit-transform: 	translateY(.2em);
+	-moz-transform: 	translateY(.2em);
+	transform: 			translateY(.2em);
+}
+
+.form-submit:focus {
+	outline: none;
+	color: rgba(254,255,255,0.9) !important;
+	text-shadow: rgba(0,0,0,0.2) 0 1px 2px;
+}
+
+.button[disabled], .button[disabled]:hover, .button.disabled, .button.disabled:hover {
+	opacity: 			.5;
+	cursor: 			default;
+	color: 				rgba(0,0,0,0.2) !important;
+	text-shadow: 		none !important;
+	background-color: 	rgba(0,0,0,0.05);
+	background-image: 	none;
+	border-top: 		none;
+
+	-webkit-box-shadow: inset rgba(255,254,255,0.4) 0 0.3em .3em, inset rgba(0,0,0,0.1) 0 -0.1em .3em, /* inner shadow */ 
+							rgba(0,0,0,0.3) 0 .1em 1px, /* border */
+							rgba(0,0,0,0.2) 0 .2em 6px; /* drop shadow */
+	-moz-box-shadow: 	inset rgba(255,254,255,0.4) 0 0.3em .3em, inset rgba(0,0,0,0.1) 0 -0.1em .3em, /* inner shadow */ 
+							rgba(0,0,0,0.3) 0 .1em 1px, /* border */
+							rgba(0,0,0,0.2) 0 .2em 6px; /* drop shadow */
+	box-shadow: 		inset rgba(255,254,255,0.4) 0 0.3em .3em, inset rgba(0,0,0,0.1) 0 -0.1em .3em, /* inner shadow */ 
+							rgba(0,0,0,0.3) 0 .1em 1px, /* border */
+							rgba(0,0,0,0.2) 0 .2em 6px; /* drop shadow */
+
+	-webkit-transform: 	translateY(5px);
+	-moz-transform: 	translateY(5px);
+	transform: 			translateY(5px);
+}
+
+
+.ajax-progress .message {
+  display:none;
+}
+
+.ajax-progress {
+ float: left;
+ height: 5px;	
+}
+
+/* -------------- THE Nice Message -------------- */
+.nice-message {
+
+/* text */
+	text-decoration: 		none;
+	/*font: 					24px/1em 'Droid Sans', sans-serif;
+	font-weight: 			bold;
+	text-shadow: 			rgba(255,255,255,.5) 0 1px 0;  */
+	-webkit-user-select: 	none;
+	-moz-user-select: 		none;
+	user-select: 			none;
+	
+	
+/* layout */
+	padding: 				.5em .6em .4em .6em;
+	margin: 				.5em;
+	display: 				inline-block;
+	position: 				relative;
+	
+	-webkit-border-radius: 	8px;
+	-moz-border-radius: 	8px;
+	border-radius: 	8px;
+	
+/* effects */
+	border-top: 		1px solid rgba(255,255,255,0.8);
+	border-bottom: 		1px solid rgba(0,0,0,0.1);
+	
+	
+	-webkit-transition: background .2s ease-in-out;
+	-moz-transition: 	background .2s ease-in-out;
+	transition: 		background .2s ease-in-out;
+	
+/* color */
+	color: 				hsl(0, 0%, 0%) !important;
+	background-color: 	hsl(0, 0%, 75%);
+	
+	-webkit-box-shadow: inset rgba(255,254,255,0.6) 0 0.3em .3em, inset rgba(0,0,0,0.15) 0 -0.1em .3em, /* inner shadow */ 
+						hsl(0, 0%, 60%) 0 .1em 3px, hsl(0, 0%, 45%) 0 1px 1px, /* color border */
+						rgba(0,0,0,0.2) 0 1px 1px; /*  drop shadow */
+	-moz-box-shadow: 	inset rgba(255,254,255,0.6) 0 0.3em .3em, inset rgba(0,0,0,0.15) 0 -0.1em .3em, /* inner shadow */ 
+						hsl(0, 0%, 60%) 0 .1em 3px, hsl(0, 0%, 45%) 0 1px 1px, /* color border */
+						rgba(0,0,0,0.2) 0  .2em 1px;  /* drop shadow */
+	box-shadow:		 	inset rgba(255,254,255,0.6) 0 0.3em .3em, inset rgba(0,0,0,0.15) 0 -0.1em .3em, /* inner shadow */ 
+						hsl(0, 0%, 60%) 0 .1em 3px, hsl(0, 0%, 45%) 0 1px 1px, /* color border */
+						rgba(0,0,0,0.2) 0 1px 1px;  /* drop shadow */
+}
+  
+/* VIEWS */
+
+.view-filters {
+	float:left;
+	clear:both;
+	width:100%;
+}
+
+#edit-distance {
+	width:400px;
+	}
