--- a/sites/all/themes/runmemo/css/style.css
+++ b/sites/all/themes/runmemo/css/style.css
@@ -2502,19 +2502,7 @@ border-bottom: 1px solid #e9e9e9!important;
     width: 220px;
 }
 
-/* -------------- THE button -------------- 
-#user-login input{
-    font-family: Arial,Helvetica,sans-serif;
-    font-size: 13px;
-    height: 40px; 
-    -webkit-box-shadow: none !important; 
-    -moz-box-shadow: none !important; 
-    box-shadow: none !important;
-   width: 400px;
-}
-*/
-
-
+/* -------------- THE button -------------- */
 
 .form-submit {
 /* text */
@@ -2537,11 +2525,7 @@ border-bottom: 1px solid #e9e9e9!important;
 	border-radius: 5px;
 	
 /* effects */
-	border: 1px solid #DEE4E7;
-	/*border-top: 		1px solid rgba(255,255,255,0.8);
-	border-bottom: 		1px solid rgba(0,0,0,0.1);*/
-	
-	
+		
 	-webkit-transition: background .2s ease-in-out;
 	-moz-transition: 	background .2s ease-in-out;
 	transition: 		background .2s ease-in-out;
@@ -2552,41 +2536,20 @@ border-bottom: 1px solid #e9e9e9!important;
 	*/
 	color:#EEE;
 	background-color:#EE6600;
-	
-	-webkit-box-shadow: inset rgba(255,254,255,0.6) 0 0.3em .3em, inset rgba(0,0,0,0.15) 0 -0.1em .3em, /* inner shadow */ 
-						hsl(0, 0%, 60%) 0 .1em 3px, hsl(0, 0%, 45%) 0 .3em 1px, /* color border */
-						rgba(0,0,0,0.2) 0 .5em 5px; /* drop shadow */
-	-moz-box-shadow: 	inset rgba(255,254,255,0.6) 0 0.3em .3em, inset rgba(0,0,0,0.15) 0 -0.1em .3em, /* inner shadow */ 
-						hsl(0, 0%, 60%) 0 .1em 3px, hsl(0, 0%, 45%) 0 .3em 1px, /* color border */
-						rgba(0,0,0,0.2) 0 .5em 5px; /* drop shadow */
-	box-shadow:		 	inset rgba(255,254,255,0.6) 0 0.3em .3em, inset rgba(0,0,0,0.15) 0 -0.1em .3em, /* inner shadow */ 
-						hsl(0, 0%, 60%) 0 .1em 3px, hsl(0, 0%, 45%) 0 .3em 1px, /* color border */
-						rgba(0,0,0,0.2) 0 2px 2px; /*  drop shadow */
 }
 
 /* -------------- button (tag) -------------- */
 
 .form-submit:hover {
- background-color:#FF4400;
+	background-color:#FF4400;
 }
 
-
-
 .form-submit:active {
-	background-image: 	-webkit-gradient(radial, 50% 0, 100, 50% 0, 0, from( rgba(255,255,255,0) ), to( rgba(255,255,255,0) )), url(noise.png);
+	/*background-image: 	-webkit-gradient(radial, 50% 0, 100, 50% 0, 0, from( rgba(255,255,255,0) ), to( rgba(255,255,255,0) )), url(noise.png);
 	background-image: 	-moz-gradient(radial, 50% 0, 100, 50% 0, 0, from( rgba(255,255,255,0) ), to( rgba(255,255,255,0) )), url(noise.png);
 	background-image: 	gradient(radial, 50% 0, 100, 50% 0, 0, from( rgba(255,255,255,0) ), to( rgba(255,255,255,0) )), url(noise.png);
-
-	-webkit-box-shadow: inset rgba(255,255,255,0.6) 0 0.3em .3em, inset rgba(0,0,0,0.2) 0 -0.1em .3em, /* inner shadow */ 
-							rgba(0,0,0,0.4) 0 .1em 1px, /* border */
-							rgba(0,0,0,0.2) 0 .2em 6px; /* drop shadow */
-	-moz-box-shadow: 	inset rgba(255,255,255,0.6) 0 0.3em .3em, inset rgba(0,0,0,0.2) 0 -0.1em .3em, /* inner shadow */ 
-							rgba(0,0,0,0.4) 0 .1em 1px, /* border */
-							rgba(0,0,0,0.2) 0 .2em 6px; /* drop shadow */
-	box-shadow: 		inset rgba(255,255,255,0.6) 0 0.3em .3em, inset rgba(0,0,0,0.2) 0 -0.1em .3em, /* inner shadow */ 
-							rgba(0,0,0,0.4) 0 .1em 1px, /* border */
-							rgba(0,0,0,0.2) 0 .2em 6px; /* drop shadow */
-
+	
+	*/
 	-webkit-transform: 	translateY(.2em);
 	-moz-transform: 	translateY(.2em);
 	transform: 			translateY(.2em);
@@ -2606,16 +2569,6 @@ border-bottom: 1px solid #e9e9e9!important;
 	background-color: 	rgba(0,0,0,0.05);
 	background-image: 	none;
 	border-top: 		none;
-
-	-webkit-box-shadow: inset rgba(255,254,255,0.4) 0 0.3em .3em, inset rgba(0,0,0,0.1) 0 -0.1em .3em, /* inner shadow */ 
-							rgba(0,0,0,0.3) 0 .1em 1px, /* border */
-							rgba(0,0,0,0.2) 0 .2em 6px; /* drop shadow */
-	-moz-box-shadow: 	inset rgba(255,254,255,0.4) 0 0.3em .3em, inset rgba(0,0,0,0.1) 0 -0.1em .3em, /* inner shadow */ 
-							rgba(0,0,0,0.3) 0 .1em 1px, /* border */
-							rgba(0,0,0,0.2) 0 .2em 6px; /* drop shadow */
-	box-shadow: 		inset rgba(255,254,255,0.4) 0 0.3em .3em, inset rgba(0,0,0,0.1) 0 -0.1em .3em, /* inner shadow */ 
-							rgba(0,0,0,0.3) 0 .1em 1px, /* border */
-							rgba(0,0,0,0.2) 0 .2em 6px; /* drop shadow */
 
 	-webkit-transform: 	translateY(5px);
 	-moz-transform: 	translateY(5px);
