Photo profile page * refactoring module ubercart_custom * tests added

--- a/sites/all/themes/runmemo/style.css
+++ b/sites/all/themes/runmemo/style.css
@@ -550,6 +550,10 @@ body.two-sidebars #squeeze {
   display:block;
 }
 
+.region-content {
+  float: left;
+}
+
 #wrapper #container .breadcrumb {
   position: absolute;
   top: 15px;
