--- a/sites/all/themes/runmemo/css/style.css
+++ b/sites/all/themes/runmemo/css/style.css
@@ -2636,6 +2636,10 @@ border-bottom: 1px solid #e9e9e9!important;
 	width:100%;
 }
 
+.region-content {
+  float:left;
+}
+        
 #edit-distance {
 	width:400px;
-	}
+	}      
