--- a/sites/all/themes/runmemo/css/style.css
+++ b/sites/all/themes/runmemo/css/style.css
@@ -458,10 +458,6 @@ float:left;
 	font-weight:normal;
 }
 
-#edit-search{
-margin-top:15px;
-margin-left:10px;
-}
 #tabs-wrapper{
 border:none !important;
 }
@@ -712,11 +708,12 @@ display:none;
 }
 
 .front .form-item-name label,
-.front .form-item-pass label {
+.front .form-item-pass label,
+.front .form-item-fake-password label {
 display:none;
 
 }
-	
+
 .front form {
 	border:none;
 	padding:0px;
@@ -1046,16 +1043,16 @@ background-position:24px 0!important;
 .page-login  .description {
 display:none;
 }	
-.page-login .content #sign-in-fieldset {
+.page-login #sign-in-fieldset {
   float:right;
   padding-right:0px;
+  margin-left:20px;
 }
-.page-login .content #register-fieldset {
+.page-login #register-fieldset {
   float:left;
-   background:none!important;
-border:none !important;
-  margin:0 0 0 0!important;
-  padding:0;
+  border:none !important;
+ 
+  padding:10px;
 }
 .page-login .login-forgot {
    text-align:left;
@@ -1100,15 +1097,15 @@ border:none !important;
 }
 .page-login #user-register-form{
    border: 1px solid #D2D2D2;
-      width: 490px;
-margin-right:20px;
-margin-top:0;
+    width: 450px;
+	margin-right:20px;
+	margin-top:0;
 }
 
 .page-login #register-fieldset .fieldset-wrapper {
   margin-right: 10px;
     padding: 0;
-    width: 490px;
+    width: 450px;
 
 }
 
@@ -2172,7 +2169,7 @@ border-bottom: 1px solid #e9e9e9!important;
 }
 
 .page-login #user-register-form .confirm-parent, .password-parent {
-    width: 490px;
+    width: 450px;
     margin: 10px 0 10px 0;
 }
 .page-login #user-register-form .confirm-parent label {
@@ -2529,7 +2526,8 @@ border-bottom: 1px solid #e9e9e9!important;
 	-webkit-border-radius: 	5px;
 	-moz-border-radius: 	5px;
 	border-radius: 5px;
-	
+	margin-top:15px;
+
 /* effects */
 		
 	-webkit-transition: background .2s ease-in-out;
