--- a/sites/all/themes/runmemo/css/style.css
+++ b/sites/all/themes/runmemo/css/style.css
@@ -1,7 +1,7 @@
 
 @import url("menu.css");
 
-@charset "utf-8";
+/*@charset "utf-8";*/
 body {
 	margin:0px;
 	padding:0px;
@@ -62,7 +62,7 @@ float:right;
 margin:0;
 }
 .logo {
-	background:url(../images/logo.png) no-repeat;
+	background:url('../images/logo.png') no-repeat;
 	width:259px;
 	height:45px;
 	margin-top:20px;
@@ -133,7 +133,7 @@ it
 }
 
 .login-logo {
-	background:url(../images/login-logo.png) no-repeat; 
+	background:url('../images/login-logo.png') no-repeat; 
 	width:25px;
 	height:25px;
 	margin-left:10px;
@@ -150,23 +150,23 @@ it
 }
 
 .facebook-logo {
-	background:url(../images/facebook-login.png) no-repeat;
+	background:url('../images/facebook-login.png') no-repeat;
 	width:25px;
 	height:25px;
 	margin-left:10px;
 }
 .facebook-logo:hover
 {
-	background:url(../images/facebook-login-hover.png) no-repeat;
+	background:url('../images/facebook-login-hover.png') no-repeat;
 }
 .twitter-logo {
-	background:url(../images/twitter-login.png) no-repeat;
+	background:url('../images/twitter-login.png') no-repeat;
 	width:25px;
 	height:25px;
 	margin-left:10px;
 }
 .twitter-logo:hover {
-	background:url(../images/twitter-login-hover.png) no-repeat;
+	background:url('../images/twitter-login-hover.png') no-repeat;
 }
 .mt3 {
 	margin-top:2px!important;
@@ -177,7 +177,7 @@ it
 	margin-top:10px;
 }
 .slider-left {
-	background:url(../images/slider.jpg) no-repeat;
+	background:url('../images/slider.jpg') no-repeat;
 	width:498px;
 	height:500px;
 	position:relative;
@@ -189,7 +189,7 @@ float:right;
 	margin-top:5px;
 }
 .cart-img {
-	background:url(../images/cart.png) no-repeat;
+	background:url('../images/cart.png') no-repeat;
 	width:28px;
 	height:18px;
 	margin-top:10px;
@@ -219,7 +219,7 @@ float:left;
 	width:430px;
 }
 .slider-separator {
-	background:url(../images/slider-separator.png) no-repeat;
+	background:url('../images/slider-separator.png') no-repeat;
 	width:430px;
 	height:9px;
 	margin-top:15px;
@@ -270,7 +270,7 @@ float:left;
 	border: 1px solid #DEE4E7;
 }
 .text-box input.search {
-	background:url(../images/search.png) no-repeat;
+	background:url('../images/search.png') no-repeat;
 	width:109px;
 	height:37px;
 	margin-left:17px;
@@ -279,7 +279,7 @@ float:left;
 }
 .text-box input.search:hover
 {
-	background:url(../images/search-hover.png) no-repeat;
+	background:url('../images/search-hover.png') no-repeat;
 }
 .w299 {
 	width:299px;
@@ -295,7 +295,7 @@ float:left;
 	margin-top:25px;
 }
 .text-box input.get-started {
-	background:url(../images/get-started.png) no-repeat;
+	background:url('../images/get-started.png') no-repeat;
 	width:109px;
 	height:37px;
 	margin-left:17px;
@@ -304,7 +304,7 @@ float:left;
 }.cart 
 .text-box input.get-started:hover
 {
-	background:url(../images/get-started-hover.png) no-repeat;
+	background:url('../images/get-started-hover.png') no-repeat;
 }
 .gray-bdr {
 	width:100%;
@@ -332,7 +332,7 @@ float:left;
 	/*min-height:333px;*/
 }
 .cont-header-bg {
-	background:url(../images/cont-header-bg.png) repeat-x;
+	background:url('../images/cont-header-bg.png') repeat-x;
 	width:100%;
 	height:56px
 }
@@ -358,9 +358,9 @@ float:left;
 	margin-left:25px;
 }
 .cont-lft {
-	width:471px; border:1px solid #dedede\9;
+	width:471px; border:1px solid #dedede;
 	/*height:262px;*/
-	background:url(../images/cont-inner-bg.png) repeat;
+	background:url('../images/cont-inner-bg.png') repeat;
 	border-top:1px solid #dedede;
 	box-shadow: 0px 1px 1px 1px rgba(0, 0, 0, 0.1);
 	-webkit-box-shadow: 0px 1px 1px 1px rgba(0, 0, 0, 0.1);
@@ -372,9 +372,9 @@ float:left;
         position: relative;
 }
 .cont-rig {
-	width:471px; border:1px solid #dedede\9;
+	width:471px; border:1px solid #dedede;
 	/*height:262px;*/
-	background:url(../images/cont-inner-bg.png) repeat;
+	background:url('../images/cont-inner-bg.png') repeat;
 	border-top:1px solid #dedede;
 	box-shadow: 0px 1px 1px 1px rgba(0, 0, 0, 0.1);
 	-webkit-box-shadow: 0px 1px 1px 1px rgba(0, 0, 0, 0.1);
@@ -414,7 +414,7 @@ float:left;
         right: 0px;
 }
 .find-btn {
-	background:url(../images/find-btn.png) no-repeat left center;
+	background:url('../images/find-btn.png') no-repeat left center;
 	width:68px;
 	height:24px;
 	border:0 none;
@@ -424,13 +424,13 @@ float:left;
 }
 .find-btn:hover
 {
-	background:url(../images/find-btn-hover.png) no-repeat  left center;
+	background:url('../images/find-btn-hover.png') no-repeat  left center;
 }
 .footer
 {
 	width:100%;
 	height:88px;
-	background:url(../images/footer-bg-new.png) repeat;
+	background:url('../images/footer-bg-new.png') repeat;
 	margin-top:20px;
 	border-top:1px solid #d5d5d5;
         position: relative;
@@ -513,7 +513,7 @@ border:0 none !important;
 width:980px;
 float:left;
 margin:0 !important;;
-paddding:0;
+padding:0;
 }
 .page-user #squeeze{
 margin:0 !important;
@@ -575,10 +575,10 @@ min-height:480px;
 .page-user #user-login .form-text,
 .page-login #user-login .form-text {
 	width:250px;
-	margin-righ:10px;
+	margin-right:10px;
 	float:right;
 	clear:right;
-	margin:bottom:15px;
+	margin-bottom:15px;
 	}
 
 .page-user .form-submit {
@@ -649,7 +649,6 @@ margin-left:10px;
 #user-register-form .captcha{
 float:left;
 border:none;
-padding:none !important;
 }
 #user-register-form #edit-actions{
 float:left;
@@ -677,7 +676,8 @@ width:149px;
     position: relative;
     top: 4px;
 width:10px;
-border:none\9; outline:none\9;
+border:none; 
+outline:none;
 }
 #user-register-form .field-widget-options-onoff .description{
  float: right;
@@ -737,7 +737,7 @@ display:none;
 	}
 #edit-actions {
 	float:right;
-	width:152;
+	width:152px;
 	}
 .one-sidebar .content span table{
 display:none !important;
@@ -842,7 +842,7 @@ width:338px !important;
 float:right;
 }
 .log_in{
-  font-family: Walkway Bold;
+  font-family: 'Walkway Bold';
   font-size: 18px;
   color:#94bb1f;
   width:350px;
@@ -866,8 +866,7 @@ margin-bottom:20px;
 	padding-right:20px;
 	}
 
-.page-search-result .chzn-container-single .chzn-single,
-.page-photographer .chzn-container-single .chzn-single{
+.page-search-result .chzn-container-single .chzn-single{
 width:450px!important;
 height:39px!important; 
 /* padding:0 10px; */
@@ -1087,7 +1086,7 @@ display:none;
    display:block;
    color:#94BB17;
    font-size: 26px;
-   magin-bottom:3px;
+   margin-bottom:3px;
 }
 
 #sign-in-fieldset .fieldset-legend {
@@ -1637,7 +1636,7 @@ text-align:justify;
 .region-sidebar-second .content .prev_img_details {
     border: 1px solid #ccc;
     padding: 0 0 0 7px;
-    with:406px;
+    width:406px;
 }
 
 
@@ -1738,7 +1737,7 @@ box-shadow: none;
 ul#edit-file_filelist{
 	*visibility:hidden!important; /* IE 7 (IE6 also uses this, so put it first) */
 	_visibility:hidden!important; /* IE 6 */
-	visibility:hidden\0/!important; 
+	visibility:hidden!important; 
 	
  }
 
@@ -1792,24 +1791,20 @@ border: none;
 
 
 .page-cart #uc-cart-view-form .content {
-    border-radius: none!important;
     box-shadow: none!important;
     margin-bottom:0px!important;
     margin-top: 0px!important;
     min-height: 0px!important;
     padding-bottom: 0px!important;
-    width: none!important;
 }
 
 
 #block-uc-cart-cart .content {
-  border-radius: none !important;
   box-shadow:  none !important;
   margin-bottom: 0px !important;
   margin-top: 0px !important;
   min-height: 0px !important;
   padding-bottom: 0px !important;
-  width: none!important;
 }
 
 
@@ -2238,7 +2233,7 @@ border-bottom: 1px solid #e9e9e9!important;
   width:612px;
 }
 .page-cart-checkout-review .content table.order-review-table tr.review-order-title{
-  background:url(../images/login-head.png) repeat-x;
+  background:url('../images/login-head.png') repeat-x;
   height: 60px;
 }
 .page-cart-checkout-review .content table.order-review-table tr.review-order-title td{
@@ -2284,7 +2279,6 @@ border-bottom: 1px solid #e9e9e9!important;
  }
  .page-cart-checkout-review .order-review-table .review-button-row td{
    background-color: rgba(245, 245, 245, 0.589844);
-   border:0px 0px 10px 10px;
    border-top: 1px solid #DEDEDE;
    padding-top: 1em;
    text-align: center;
@@ -2292,7 +2286,7 @@ border-bottom: 1px solid #e9e9e9!important;
  }
 
  .page-cart-checkout-review .order-review-table .review-button-row #uc-cart-checkout-review-form #edit-actions #edit-back{
-   background:url(../images/back-btn.png) no-repeat;
+   background:url('../images/back-btn.png') no-repeat;
    width: 85px;
    height: 37px;
    float:left;
@@ -2301,10 +2295,10 @@ border-bottom: 1px solid #e9e9e9!important;
    cursor: pointer;
  }
  .page-cart-checkout-review .order-review-table .review-button-row #uc-cart-checkout-review-form #edit-actions #edit-back:hover{
-   background:url(../images/back-btn-hover.png) no-repeat;
+   background:url('../images/back-btn-hover.png') no-repeat;
  }
  .page-cart-checkout-review .order-review-table .review-button-row #uc-cart-checkout-review-form #edit-actions #edit-submit{
-   background:url(../images/submit-order.png) no-repeat;
+   background:url('../images/submit-order.png') no-repeat;
    width: 125px;
    height: 37px;
    float:left;
@@ -2312,7 +2306,7 @@ border-bottom: 1px solid #e9e9e9!important;
    cursor: pointer;
  }
  .page-cart-checkout-review .order-review-table .review-button-row #uc-cart-checkout-review-form #edit-actions #edit-submit:hover{
-   background:url(../images/submit-order-hover.png) no-repeat;
+   background:url('../images/submit-order-hover.png') no-repeat;
  }
  .page-cart-checkout #edit-panes-billing-billing-country--2_chzn{
    width:10px!important;
@@ -2479,12 +2473,12 @@ border-bottom: 1px solid #e9e9e9!important;
   }
     
   .mp_status_success {
-	background:url(../images/done.png) no-repeat scroll 0 0 transparent;
+	background:url('../images/done.png') no-repeat scroll 0 0 transparent;
         height : 25px;
         width : 24px;  
   }
   .mp_status_failure {
-	background:url(../images/error.gif) no-repeat scroll 0 0 transparent;
+	background:url('../images/error.gif') no-repeat scroll 0 0 transparent;
         height : 25px;
         width : 24px;  
   }
@@ -2540,7 +2534,6 @@ border-bottom: 1px solid #e9e9e9!important;
 	font-weight: 			bold;
 	-webkit-user-select: 	none;
 	-moz-user-select: 		none;
-	user-select: 			none;
 	
 	
 /* layout */
@@ -2625,7 +2618,6 @@ border-bottom: 1px solid #e9e9e9!important;
 	text-shadow: 			rgba(255,255,255,.5) 0 1px 0;  */
 	-webkit-user-select: 	none;
 	-moz-user-select: 		none;
-	user-select: 			none;
 	
 	
 /* layout */
