--- a/sites/all/modules/custom/ubercart_custom/ubercart_custom.css
+++ b/sites/all/modules/custom/ubercart_custom/ubercart_custom.css
@@ -10,20 +10,25 @@
   display: block;
 }*/
 
-.node-type-product .product_preview{
+.node-type-product .product_preview {
 	width:400px;
 	float:left;
         border: 1px solid #DEE4E7;
 }
 
-.node-type-product .product_content{
-	min-width:500px;
+.node-type-product .product_content {
+	min-width:400px;
 	float:right;
         padding: 10px; 
         border: 1px solid #DEE4E7; 
         border-radius: 5px 5px 5px 5px;        
 }
 
+.node-type-product .node {
+        width: 100%;
+        border: 1px solid #DEE4E7; 
+        border-radius: 5px 5px 5px 5px;  
+}
 
 /*jquery.tagsinput.css*/
 div.tagsinput { 
