Event name added to "Let me know..." form

--- a/sites/all/modules/custom/photo_search/photo_search.css
+++ b/sites/all/modules/custom/photo_search/photo_search.css
@@ -246,6 +246,10 @@ form#select-event-runner-get-photos {
   -moz-border-radius: 5px;
 }
 
+.page-search-result p {
+  width: 400px;
+}
+
 .page-search-result #photo-request-submit-button {
   display: block;
   height: 50px;
