Applied new price policy * list_price - set by photographer * sell_price = list_price + RUNMEMO_COMMISION

--- a/sites/all/modules/custom/photo_upload/photo_upload.css
+++ b/sites/all/modules/custom/photo_upload/photo_upload.css
@@ -53,7 +53,7 @@ display:block;
     right:16px;
         
 }
-.page-photographer-upload  .sell-price-slider {
+.page-photographer-upload  .price-slider {
     width: 350px; 
     float: right;
     margin-bottom: 10px; 
