--- a/sites/all/modules/custom/ubercart_custom/ubercart_custom.css
+++ b/sites/all/modules/custom/ubercart_custom/ubercart_custom.css
@@ -30,7 +30,7 @@
         border-radius: 5px 5px 5px 5px;  
 }
 
-.node-type-product  .sell-price-slider {
+.node-type-product  .price-slider {
     width: 150px; 
     margin-bottom: 10px; 
     margin-top: 10px;
