Removed dummy map from node event tpl.

--- a/sites/all/modules/custom/sport_event/sport_event.css
+++ b/sites/all/modules/custom/sport_event/sport_event.css
@@ -36,17 +36,13 @@
 
 .node-event .field {
 		clear:left;
-}		
-.googlemaps {
-	background:transparent url(images/googlemaps.png);
-	background-repeat:no-repeat;
-	padding-top: 100px;
-	padding-left: 150px;
-	width:350px;
-	display:block;
-	height:200px;
-  /*	opacity: 0.4; */
-	
+}
+
+.geofieldMap {
+	margin-top:20px;
+	border-style:solid;
+	border-width:1px;'
+	border-color:#555;
 	}
 .coming-soon {
 	padding:20px;
