--- a/sites/all/modules/custom/photo_upload/photo_upload.css
+++ b/sites/all/modules/custom/photo_upload/photo_upload.css
@@ -1,6 +1,17 @@
 .page-photographer #center form {
 	margin:0;
+	
 	}
+.page-photographer #select-event-function {
+	height:80px;
+	padding:20px;
+	border-style:solid;
+	border-width:1px;
+	border-bottom-left-radius:5px;
+	border-bottom-right-radius:5px;
+	border-color:#999;
+}
+
 .page-photographer .select_event_title {
    float:left;
    padding:20px 5px 16px 0px;
@@ -27,9 +38,7 @@ display:block;
         }
         
 .page-photographer #event_drop {
-   padding:0 0 16px 0;
    float:left;
-   height:63px;
 }
 
 .page-photographer #edit-box {
@@ -46,6 +55,13 @@ display:block;
 	width:100%;
 }
 
+.page-photographer-upload .form-item {
+	margin-top:0px;
+	}
+.page-photographer-upload .ui-slider {
+	margin-top:10px;
+
+}
 .form-type-plupload .description {
 	
     color:#898989;
@@ -53,11 +69,10 @@ display:block;
     right:16px;
         
 }
-.page-photographer-upload  .price-slider {
+.page-photographer-upload .price-slider {
     width: 350px; 
-    float: right;
-    margin-bottom: 10px; 
-    margin-top: 10px;
+    float: left;
+    margin-left:50px;
 }
 .page-photographer-upload .plupload_droptext {
 	height:70%;
